--- a/code/VsCodeProject/platformio.ini
+++ b/code/VsCodeProject/platformio.ini
@@ -22,11 +22,14 @@ lib_deps =
 	mike-matera/ArduinoSTL@^1.3.3
 	gitlab-airbornemint/Protothreads@^1.4.0-arduino.beta.1
 
-[env:UT]
+[env:UnitTestEnviroment]
 platform = native
 test_framework = googletest
 lib_compat_mode = off
 build_flags = -std=c++17 -Wall -Wextra -Wpedantic -Wunused -fpermissive
+lib_deps = 
+	gitlab-airbornemint/Protothreads@^1.4.0-arduino.beta.1
+
 [env:check]
 platform = native
 lib_deps = google/googletest@1.12.0
